syntax = "proto3";

package api.protobuf.eq;

import "mutation.proto";

option java_package = "org.example.api.protobuf.eq";
option java_outer_classname = "SimpleServiceProto";
option java_multiple_files = true;

service EqBands {
  // Mutations
  rpc UpdateBand(BandIdent) returns (mutation.MutationResult) {}

  // Subscriptions
  rpc GetBand(BandRequest) returns (stream BandResponse) {}
  rpc GetBands(BandsRequest) returns (stream BandsResponse) {}
}

message BandRequest {
  int32 band = 1;
}

message BandResponse {
  int32 index = 1;
  int32 gain = 2;
}

message BandsRequest {}

message BandsResponse {
  repeated BandResponse bands = 1;
}

message BandIdent {
  int32 index = 1;
  int32 gain = 2;
}
