syntax = "proto3";

package api.protobuf.mutation;

option java_package = "org.example.api.protobuf.mutation";
option java_multiple_files = true;

message MutationResult {
  string result = 1;
}
